--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit==1.40.0
-yfinance==0.2.20
-plotly==5.14.1
-numpy==1.24.2
-pandas==1.5.3
-setuptools==65.5.0
-pip==24.3.1
+numpy 
+pandas
 matplotlib
+plotly
+streamlit
 streamlit_option_menu
 datetime
+yfinance
 stocknews
